--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -52,7 +52,7 @@
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <button data-montage-id="button"></button>
-        <div data-montage-id="overlay">
+        <div data-montage-id="overlay" class="Overlay">
             <input data-montage-id="autocomplete">
         </div>
     </div>
