--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -52,7 +52,7 @@
                 "keys": "escape",
                 "component": {"@": "owner"},
                 "identifier": "cancelEditing",
-                "element": {"#": "binding-jig"}
+                "element": {"#": "autocomplete"}
             },
             "listeners": [
                 {
