--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -17,7 +17,7 @@
             "prototype": "matte/ui/autocomplete/autocomplete.reel",
             "properties": {
                 "element": {"#": "autocomplete"},
-                "delegate": {"@": "owner"},
+                "delegate": {"@": "owner"}
             }
         },
         "button": {
