--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -47,7 +47,7 @@
                 "element": {"#": "overlay"}
             }
         },
-        "cancelEditing": {
+        "cancelAutocomplete": {
             "prototype": "montage/composer/key-composer",
             "properties": {
                 "keys": "escape",
