--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -61,7 +61,7 @@
                 }
             ]
         },
-        "cancelEditing": {
+        "cancel": {
             "prototype": "montage/composer/key-composer",
             "properties": {
                 "keys": "escape",
