--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -66,7 +66,7 @@
             "properties": {
                 "keys": "escape",
                 "component": {"@": "owner"},
-                "identifier": "cancelEditing"
+                "identifier": "cancel"
             },
             "listeners": [
                 {
