--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -52,7 +52,8 @@
             "properties": {
                 "keys": "escape",
                 "component": {"@": "owner"},
-                "identifier": "cancelAutocomplete"
+                "identifier": "cancelAutocomplete",
+                "element": {"#": ""}
             },
             "listeners": [
                 {
