--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -53,7 +53,7 @@
                 "keys": "escape",
                 "component": {"@": "owner"},
                 "identifier": "cancelAutocomplete",
-                "element": {"#": ""}
+                "element": {"@": "autocomplete"}
             },
             "listeners": [
                 {
@@ -74,7 +74,7 @@
                     "type": "keyPress",
                     "listener": {"@": "owner"}
                 }
-                ]
+              ]
         }
     }
     </script>
