--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -67,7 +67,8 @@
             "properties": {
                 "keys": "escape",
                 "component": {"@": "owner"},
-                "identifier": "cancel"
+                "identifier": "cancel",
+                "element": {"@": "owner"}
             },
             "listeners": [
                 {
